send e-mail when contact on onder

--- a/backend/src/modules/orders/views/contact_order_mail.hbs
+++ b/backend/src/modules/orders/views/contact_order_mail.hbs
@@ -463,25 +463,11 @@
                       <div class="f-fallback">
                         <h1>Olá {{name}},</h1>
                         <p>
-                            Gostaríamos de informar que sua solicitação de reserva para o espaço "{{room}}" na data {{date}} de {{hour}} foi rejeitada! <br/><br/>
-                           <strong>Se ainda pretende reservar o espaço, você pode tentar reservar novamente clicando no botão para solicitar uma nova reserva de espaço.</strong></p>
+                            {{contact}} <br/>
+                        </p>
                         <!-- Action -->
-                        <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
-                          <tr>
-                            <td align="center">
-                              <!-- Border based button
-           https://litmus.com/blog/a-guide-to-bulletproof-buttons-in-email-design -->
-                              <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
-                                <tr>
-                                  <td align="center">
-                                    <a href="{{link}}" class="f-fallback button" target="_blank">Ver espaço</a>
-                                  </td>
-                                </tr>
-                              </table>
-                            </td>
-                          </tr>
-                        </table>
-                        <p>Caso ainda tenha dúvidas, você pode entrar em contato com o FrameRoom por esse e-mail</p>
+
+                        <p><strong>Entre em contato por esse e-mail, para podermos aprovar sua solicitação de reserva de espaço!</strong> </p>
                         <p>Obrigado,
                           <br>Equipe FrameRoom</p>
                         <!-- Sub copy -->
