--- a/backend/src/modules/orders/views/approve_order_mail.hbs
+++ b/backend/src/modules/orders/views/approve_order_mail.hbs
@@ -463,7 +463,7 @@
                       <div class="f-fallback">
                         <h1>Olá {{name}},</h1>
                         <p>
-                            Gostaríamos de informar que sua solicitação de reserva para o espaço "{{room}}" na data {{date}} de {{hour}} foi aprovada!
+                            Gostaríamos de informar que sua solicitação de reserva para o espaço "{{room}}" na data {{date}} de {{hour}} (ou horário combinado) foi aprovada! <br/><br/>
                            <strong>Se ainda tiver dúvidas sobre o espaço reservado. Clique no botão para acessar suas informações.</strong></p>
                         <!-- Action -->
                         <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
