--- a/backend/src/modules/orders/views/contact_order_mail.hbs
+++ b/backend/src/modules/orders/views/contact_order_mail.hbs
@@ -467,7 +467,7 @@
                         </p>
                         <!-- Action -->
 
-                        <p><strong>Entre em contato por esse e-mail, para podermos aprovar sua solicitação de reserva de espaço!</strong> </p>
+                        <p><strong>Entre em contato por este e-mail, para podermos aprovar sua solicitação de reserva de espaço!</strong> </p>
                         <p>Obrigado,
                           <br>Equipe FrameRoom</p>
                         <!-- Sub copy -->
