--- a/backend/src/modules/orders/views/reject_order_mail.hbs
+++ b/backend/src/modules/orders/views/reject_order_mail.hbs
@@ -463,7 +463,13 @@
                       <div class="f-fallback">
                         <h1>Olá {{name}},</h1>
                         <p>
-                            Gostaríamos de informar que sua solicitação de reserva para o espaço foi rejeitada! <br/><br/>
+                            Gostaríamos de informar que sua solicitação de reserva para o espaço "{{room}}" foi rejeitada! <br/><br/>
+                             <strong><p>Semana: {{week}}</p></strong>
+                            {{#each intervals}}
+                            <div>
+                              <p>{{{this.day}}} - {{{this.interval}}}</p>
+                           </div>
+                        {{/each}}
                            <strong>Se ainda pretende reservar o espaço, você pode tentar reservar novamente clicando no botão para solicitar uma nova reserva de espaço.</strong></p>
                         <!-- Action -->
                         <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
